# aiDog_ws

./: README.md
src/webinterface/: CMakeLists.txt  package.xml
src/webinterface/src/: action.cpp  pubdef.cpp  pubdef.h  rest_interface.cpp  rest_interface.h  webinterface.cpp
